fleshed out Rabin PetriNet -> Automaton conversion